[package]
name = "encrypted-conn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
bytes = "1.1.0"
ed25519-dalek = {version = "1.0.1", features = ["rand", "rand_core"]}
rand = { version = "0.7.3"}
snow = "0.9.0"
tokio = { version = "1.19.2", features = ["full"] }
